activate subsidizing for JHB for testing

--- a/configs/policy.yaml
+++ b/configs/policy.yaml
@@ -1813,7 +1813,7 @@ acct_settings:
       county_name: 'ala'
       sending_buildings_subaccount_def: regional
       receiving_buildings_filter: county == 'Alameda'
-      subsidize_affordable: False
+      subsidize_affordable: True
       jobs_housing_fee_com_for_res_amounts:
         'Alameda': 3
         'Albany': 3
@@ -1835,7 +1835,7 @@ acct_settings:
       county_name: 'cnc'
       sending_buildings_subaccount_def: regional
       receiving_buildings_filter: county == 'Contra Costa'
-      subsidize_affordable: False
+      subsidize_affordable: True
       jobs_housing_fee_com_for_res_amounts:
         'Antioch': 0
         'Brentwood': 0
@@ -1862,7 +1862,7 @@ acct_settings:
       county_name: 'mar'
       sending_buildings_subaccount_def: regional
       receiving_buildings_filter: county == 'Marin'
-      subsidize_affordable: False
+      subsidize_affordable: True
       jobs_housing_fee_com_for_res_amounts:
         'Belvedere': 23
         'Corte Madera': 10
@@ -1881,7 +1881,7 @@ acct_settings:
       county_name: 'nap'
       sending_buildings_subaccount_def: regional
       receiving_buildings_filter: county == 'Napa'
-      subsidize_affordable: False
+      subsidize_affordable: True
       jobs_housing_fee_com_for_res_amounts:
         'American Canyon': 5
         'Calistoga': 8
@@ -1894,7 +1894,7 @@ acct_settings:
       county_name: 'sfr'
       sending_buildings_subaccount_def: regional
       receiving_buildings_filter: county == 'San Francisco'
-      subsidize_affordable: False
+      subsidize_affordable: True
       jobs_housing_fee_com_for_res_amounts:
         'San Francisco': 15
     san_mateo_jobs_housing_fee_settings:
@@ -1902,7 +1902,7 @@ acct_settings:
       county_name: 'smt'
       sending_buildings_subaccount_def: regional
       receiving_buildings_filter: county == 'San Mateo'
-      subsidize_affordable: False
+      subsidize_affordable: True
       jobs_housing_fee_com_for_res_amounts:
         'Atherton': 10
         'Belmont': 5
@@ -1930,7 +1930,7 @@ acct_settings:
       county_name: 'scl'
       sending_buildings_subaccount_def: regional
       receiving_buildings_filter: county == 'Santa Clara'
-      subsidize_affordable: False
+      subsidize_affordable: True
       jobs_housing_fee_com_for_res_amounts:
         'Campbell': 13
         'Cupertino': 18
@@ -1953,7 +1953,7 @@ acct_settings:
       county_name: 'sol'
       sending_buildings_subaccount_def: regional
       receiving_buildings_filter: county == 'Solano'
-      subsidize_affordable: False
+      subsidize_affordable: True
       jobs_housing_fee_com_for_res_amounts:
         'Benicia': 3
         'Dixon': 3
@@ -1968,7 +1968,7 @@ acct_settings:
       county_name: 'son'
       sending_buildings_subaccount_def: regional
       receiving_buildings_filter: county == 'Sonoma'
-      subsidize_affordable: False
+      subsidize_affordable: True
       jobs_housing_fee_com_for_res_amounts:
         'Cloverdale': 3
         'Cotati': 3
