add .csv to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ data/2020_06_15_zoning_lookup_hybrid_pba50.csv
 data/2020_06_15_zoning_parcels_hybrid_pba50.csv
 data/2020_07_10_parcels_geography.csv
 .DS_Store
+*.csv
