--- a/configs/policy.yaml
+++ b/configs/policy.yaml
@@ -1448,11 +1448,14 @@ acct_settings:
       total_amount: 30625010
       total_amount_db: 2470820000
       alternate_total_amount_db: 3725535000
+      total_amount_fb: 3725540000
       receiving_buildings_filter: county == 'Alameda'
+      receiving_buildings_filter_fb: county == 'Alameda' & gg_id > ''
       subsidize_affordable: True
-      enable_in_scenarios: ["11", "12", "15", "21", "22", "23"]
+      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24"]
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
+      default_amount_scenarios_fb: ["24"]
 
     contra_costa_bond_settings:
       name: "Contra Costa Affordable Housing Bond"
@@ -1460,11 +1463,14 @@ acct_settings:
       total_amount: 21150756
       total_amount_db: 1647700000
       alternate_total_amount_db: 2484420000
+      total_amount_fb: 2484430000
       receiving_buildings_filter: county == 'Contra Costa'
+      receiving_buildings_filter_fb: county == 'Contra Costa' & gg_id > ''
       subsidize_affordable: True
-      enable_in_scenarios: ["11", "12", "15", "21", "22", "23"]
+      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24"]
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
+      default_amount_scenarios_fb: ["24"]
 
     marin_bond_settings:
       name: "Marin Affordable Housing Bond"
@@ -1472,11 +1478,14 @@ acct_settings:
       total_amount: 4932118
       total_amount_db: 341650000
       alternate_total_amount_db: 515145000
+      total_amount_fb: 515150000
       receiving_buildings_filter: county == 'Marin'
+      receiving_buildings_filter_fb: county == 'Marin' & gg_id > ''
       subsidize_affordable: True
-      enable_in_scenarios: ["11", "12", "15", "21", "22", "23"]
+      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24"]
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
+      default_amount_scenarios_fb: ["24"]
 
     napa_bond_settings:
       name: "Napa Affordable Housing Bond"
@@ -1484,11 +1493,14 @@ acct_settings:
       total_amount: 2661050
       total_amount_db: 184960000
       alternate_total_amount_db: 278880000
+      total_amount_fb: 278890000
       receiving_buildings_filter: county == 'Napa'
+      receiving_buildings_filter_fb: county == 'Napa' & gg_id > ''
       subsidize_affordable: True
-      enable_in_scenarios: ["11", "12", "15", "21", "22", "23"]
+      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24"]
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
+      default_amount_scenarios_fb: ["24"]
 
     san_francisco_bond_settings:
       name: "San Francisco Affordable Housing Bond"
@@ -1496,11 +1508,14 @@ acct_settings:
       total_amount: 16310399
       total_amount_db: 1645215000
       alternate_total_amount_db: 2480675000
+      total_amount_fb: 2480680000
       receiving_buildings_filter: county == 'San Francisco'
+      receiving_buildings_filter_fb: county == 'San Francisco' & gg_id > ''
       subsidize_affordable: True
-      enable_in_scenarios: ["11", "12", "15", "21", "22", "23"]
+      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24"]
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
+      default_amount_scenarios_fb: ["24"]
 
     san_mateo_bond_settings:
       name: "San Mateo Affordable Housing Bond"
@@ -1508,11 +1523,14 @@ acct_settings:
       total_amount: 14406372
       total_amount_db: 1477290000
       alternate_total_amount_db: 2227480000
+      total_amount_fb: 2227490000
       receiving_buildings_filter: county == 'San Mateo'
+      receiving_buildings_filter_fb: county == 'San Mateo' & gg_id > ''
       subsidize_affordable: True
-      enable_in_scenarios: ["11", "12", "15", "21", "22", "23"]
+      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24"]
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
+      default_amount_scenarios_fb: ["24"]
 
     santa_clara_bond_settings:
       name: "Santa Clara Affordable Housing Bond"
@@ -1520,11 +1538,14 @@ acct_settings:
       total_amount: 36291210
       total_amount_db: 3082915000
       alternate_total_amount_db: 4648455000
+      total_amount_fb: 4648460000
       receiving_buildings_filter: county == 'Santa Clara'
+      receiving_buildings_filter_fb: county == 'Santa Clara' & gg_id > ''
       subsidize_affordable: True
-      enable_in_scenarios: ["11", "12", "15", "21", "22", "23"]
+      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24"]
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
+      default_amount_scenarios_fb: ["24"]
 
     solano_bond_settings:
       name: "Solano Affordable Housing Bond"
@@ -1532,11 +1553,14 @@ acct_settings:
       total_amount: 8120789
       total_amount_db: 562040000
       alternate_total_amount_db: 847450000
+      total_amount_fb: 847460000
       receiving_buildings_filter: county == 'Solano'
+      receiving_buildings_filter_fb: county == 'Solano' & gg_id > ''
       subsidize_affordable: True
-      enable_in_scenarios: ["11", "12", "15", "21", "22", "23"]
+      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24"]
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
+      default_amount_scenarios_fb: ["24"]
 
     sonoma_bond_settings:
       name: "Sonoma Affordable Housing Bond"
@@ -1544,11 +1568,14 @@ acct_settings:
       total_amount: 9451314
       total_amount_db: 653865000
       alternate_total_amount_db: 985905000
+      total_amount_fb: 985910000
       receiving_buildings_filter: county == 'Sonoma'
+      receiving_buildings_filter_fb: county == 'Sonoma' & gg_id > ''
       subsidize_affordable: True
-      enable_in_scenarios: ["11", "12", "15", "21", "22", "23"]
+      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24"]
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
+      default_amount_scenarios_fb: ["24"]
 
     # parcel tax settings
     parcel_tax_settings:
