add s24 geography filter handler

--- a/configs/policy.yaml
+++ b/configs/policy.yaml
@@ -1456,6 +1456,7 @@ acct_settings:
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
       default_amount_scenarios_fb: ["24"]
+      geography_scenarios_fb: ["24"] 
 
     contra_costa_bond_settings:
       name: "Contra Costa Affordable Housing Bond"
@@ -1471,6 +1472,7 @@ acct_settings:
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
       default_amount_scenarios_fb: ["24"]
+      geography_scenarios_fb: ["24"]
 
     marin_bond_settings:
       name: "Marin Affordable Housing Bond"
@@ -1486,6 +1488,7 @@ acct_settings:
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
       default_amount_scenarios_fb: ["24"]
+      geography_scenarios_fb: ["24"]
 
     napa_bond_settings:
       name: "Napa Affordable Housing Bond"
@@ -1501,6 +1504,7 @@ acct_settings:
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
       default_amount_scenarios_fb: ["24"]
+      geography_scenarios_fb: ["24"]
 
     san_francisco_bond_settings:
       name: "San Francisco Affordable Housing Bond"
@@ -1516,6 +1520,7 @@ acct_settings:
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
       default_amount_scenarios_fb: ["24"]
+      geography_scenarios_fb: ["24"]
 
     san_mateo_bond_settings:
       name: "San Mateo Affordable Housing Bond"
@@ -1531,6 +1536,7 @@ acct_settings:
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
       default_amount_scenarios_fb: ["24"]
+      geography_scenarios_fb: ["24"]
 
     santa_clara_bond_settings:
       name: "Santa Clara Affordable Housing Bond"
@@ -1546,6 +1552,7 @@ acct_settings:
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
       default_amount_scenarios_fb: ["24"]
+      geography_scenarios_fb: ["24"]
 
     solano_bond_settings:
       name: "Solano Affordable Housing Bond"
@@ -1561,6 +1568,7 @@ acct_settings:
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
       default_amount_scenarios_fb: ["24"]
+      geography_scenarios_fb: ["24"]
 
     sonoma_bond_settings:
       name: "Sonoma Affordable Housing Bond"
@@ -1576,6 +1584,7 @@ acct_settings:
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
       default_amount_scenarios_fb: ["24"]
+      geography_scenarios_fb: ["24"]
 
     # parcel tax settings
     parcel_tax_settings:
