--- a/configs/policy.yaml
+++ b/configs/policy.yaml
@@ -2910,116 +2910,139 @@ acct_settings:
       name: "Dublin Office Subsidy Bond"
       sending_buildings_subaccount_def: regional
       total_amount: 24675325
+      total_amount_eir: 14062500
       receiving_buildings_filter: juris == 'Dublin' and (
                                     tra_id == 'tra1' or
                                     tra_id == 'tra2a' or
                                     tra_id == 'tra2b' or
                                     tra_id == 'tra2c')
       enable_in_scenarios: ["24", "26", "27", "28", "29"]
+      eir_amount_scenario: ['26']
     fremont_office_bond_settings:
       name: "Fremont Office Subsidy Bond"
       sending_buildings_subaccount_def: regional
       total_amount: 24675325
+      total_amount_eir: 14062500
       receiving_buildings_filter: juris == 'Fremont' and (
                                     tra_id == 'tra1' or
                                     tra_id == 'tra2a' or
                                     tra_id == 'tra2b' or
                                     tra_id == 'tra2c')
       enable_in_scenarios: ["24", "26", "27", "28", "29"]
+      eir_amount_scenario: ['26']
     oakland_office_bond_settings:
       name: "Oakland Office Subsidy Bond"
       sending_buildings_subaccount_def: regional
       total_amount: 24675325
+      total_amount_eir: 14062500
       receiving_buildings_filter: juris == 'Oakland' and (
                                     tra_id == 'tra1' or
                                     tra_id == 'tra2a' or
                                     tra_id == 'tra2b' or
                                     tra_id == 'tra2c')
       enable_in_scenarios: ["24", "26", "27", "28", "29"]
+      eir_amount_scenario: ['26']
     san_leandro_office_bond_settings:
       name: "San Leandro Office Subsidy Bond"
       sending_buildings_subaccount_def: regional
       total_amount: 24675325
+      total_amount_eir: 14062500
       receiving_buildings_filter: juris == 'San Leandro' and (
                                     tra_id == 'tra1' or
                                     tra_id == 'tra2a' or
                                     tra_id == 'tra2b' or
                                     tra_id == 'tra2c')
       enable_in_scenarios: ["24", "26", "27", "28", "29"]
+      eir_amount_scenario: ['26']
     union_city_office_bond_settings:
       name: "Union City Office Subsidy Bond"
       sending_buildings_subaccount_def: regional
       total_amount: 24675325
+      total_amount_eir: 14062500
       receiving_buildings_filter: juris == 'Union City' and (
                                     tra_id == 'tra1' or
                                     tra_id == 'tra2a' or 
                                     tra_id == 'tra2b' or
                                     tra_id == 'tra2c')
       enable_in_scenarios: ["24", "26", "27", "28", "29"]
+      eir_amount_scenario: ['26']
     antioch_office_bond_settings:
       name: "Antioch Office Subsidy Bond"
       sending_buildings_subaccount_def: regional
       total_amount: 24675325
+      total_amount_eir: 14062500
       receiving_buildings_filter: juris == 'Antioch' and (
                                     tra_id == 'tra1' or 
                                     tra_id == 'tra2a' or 
                                     tra_id == 'tra2b' or
                                     tra_id == 'tra2c')
       enable_in_scenarios: ["24", "26", "27", "28", "29"]
+      eir_amount_scenario: ['26']
     concord_office_bond_settings:
       name: "Concord Office Subsidy Bond"
       sending_buildings_subaccount_def: regional
       total_amount: 24675325
+      total_amount_eir: 14062500
       receiving_buildings_filter: juris == 'Concord' and (
                                     tra_id == 'tra1' or 
                                     tra_id == 'tra2a' or 
                                     tra_id == 'tra2b' or
                                     tra_id == 'tra2c')
       enable_in_scenarios: ["24", "26", "27", "28", "29"]
+      eir_amount_scenario: ['26']
     el_cerrito_office_bond_settings:
       name: "El Cerrito Office Subsidy Bond"
       sending_buildings_subaccount_def: regional
       total_amount: 24675325
+      total_amount_eir: 14062500
       receiving_buildings_filter: juris == 'El Cerrito' and (
                                     tra_id == 'tra1' or
                                     tra_id == 'tra2a' or
                                     tra_id == 'tra2b' or
                                     tra_id == 'tra2c')
       enable_in_scenarios: ["24", "26", "27", "28", "29"]
+      eir_amount_scenario: ['26']
     lafayette_office_bond_settings:
       name: "Lafayette Office Subsidy Bond"
       sending_buildings_subaccount_def: regional
       total_amount: 24675325
+      total_amount_eir: 14062500
       receiving_buildings_filter: juris == 'Lafayette' and (
                                     tra_id == 'tra1' or
                                     tra_id == 'tra2a' or
                                     tra_id == 'tra2b' or
                                     tra_id == 'tra2c')
       enable_in_scenarios: ["24", "26", "27", "28", "29"]
+      eir_amount_scenario: ['26']
     pittsburg_office_bond_settings:
       name: "Pittsburg Office Subsidy Bond"
       sending_buildings_subaccount_def: regional
       total_amount: 24675325
+      total_amount_eir: 14062500
       receiving_buildings_filter: juris == 'Pittsburg' and (
                                     tra_id == 'tra1' or
                                     tra_id == 'tra2a' or
                                     tra_id == 'tra2b' or
                                     tra_id == 'tra2c')
       enable_in_scenarios: ["24", "26", "27", "28", "29"]
+      eir_amount_scenario: ['26']
     richmond_office_bond_settings:
       name: "Richmond Office Subsidy Bond"
       sending_buildings_subaccount_def: regional
       total_amount: 24675325
+      total_amount_eir: 14062500
       receiving_buildings_filter: juris == 'Richmond' and (
                                     tra_id == 'tra1' or
                                     tra_id == 'tra2a' or
                                     tra_id == 'tra2b' or
                                     tra_id == 'tra2c')
       enable_in_scenarios: ["24", "26", "27", "28", "29"]
+      eir_amount_scenario: ['26']
     san_rafael_office_bond_settings:
       name: "San Rafael Office Subsidy Bond"
       sending_buildings_subaccount_def: regional
       total_amount: 3571429
+      total_amount_eir: 4166667
       receiving_buildings_filter: juris == 'San Rafael' and (
                                     tra_id == 'tra1' or
                                     tra_id == 'tra2a' or 
@@ -3027,10 +3050,12 @@ acct_settings:
                                     tra_id == 'tra2c' or
                                     tra_id == 'tra3')
       enable_in_scenarios: ["24", "26", "27", "28", "29"]
+      eir_amount_scenario: ['26']
     fairfield_office_bond_settings:
       name: "Fairfield Office Subsidy Bond"
       sending_buildings_subaccount_def: regional
       total_amount: 3571429
+      total_amount_eir: 4166667
       receiving_buildings_filter: juris == 'Fairfield' and (
                                     tra_id == 'tra1' or
                                     tra_id == 'tra2a' or 
@@ -3038,10 +3063,12 @@ acct_settings:
                                     tra_id == 'tra2c' or
                                     tra_id == 'tra3')
       enable_in_scenarios: ["24", "26", "27", "28", "29"]
+      eir_amount_scenario: ['26']
     vacaville_office_bond_settings:
       name: "Vacaville Office Subsidy Bond"
       sending_buildings_subaccount_def: regional
       total_amount: 3571429
+      total_amount_eir: 4166667
       receiving_buildings_filter: juris == 'Vacaville' and (
                                     tra_id == 'tra1' or
                                     tra_id == 'tra2a' or 
@@ -3049,17 +3076,92 @@ acct_settings:
                                     tra_id == 'tra2c' or
                                     tra_id == 'tra3')
       enable_in_scenarios: ["24", "26", "27", "28", "29"]
+      eir_amount_scenario: ['26']
     santa_rosa_office_bond_settings:
       name: "Santa Rosa Office Subsidy Bond"
       sending_buildings_subaccount_def: regional
       total_amount: 3571429
+      total_amount_eir: 4166667
       receiving_buildings_filter: juris == 'Santa Rosa' and (
                                     tra_id == 'tra1' or
                                     tra_id == 'tra2a' or 
                                     tra_id == 'tra2b' or
                                     tra_id == 'tra2c' or
                                     tra_id == 'tra3')
-      enable_in_scenarios: ["24", "26", "27", "28", "29"]   
+      enable_in_scenarios: ["24", "26", "27", "28", "29"]
+      eir_amount_scenario: ['26']
+    berkeley_office_bond_settings:
+      name: "Berkeley Office Subsidy Bond"
+      sending_buildings_subaccount_def: regional
+      total_amount: 14062500      # default amount is EIR Alt1
+      receiving_buildings_filter: juris == 'Berkeley' and (
+                                    tra_id == 'tra1' or
+                                    tra_id == 'tra2a' or
+                                    tra_id == 'tra2b' or
+                                    tra_id == 'tra2c')
+      enable_in_scenarios: ["26"] # only EIR Alt1
+    emeryville_office_bond_settings:
+      name: "Emeryville Office Subsidy Bond"
+      sending_buildings_subaccount_def: regional
+      total_amount: 14062500      # default amount is EIR Alt1
+      receiving_buildings_filter: juris == 'Emeryville' and (
+                                    tra_id == 'tra1' or
+                                    tra_id == 'tra2a' or
+                                    tra_id == 'tra2b' or
+                                    tra_id == 'tra2c')
+      enable_in_scenarios: ["26"] # only EIR Alt1
+    hayward_office_bond_settings:
+      name: "Hayward Office Subsidy Bond"
+      sending_buildings_subaccount_def: regional
+      total_amount: 14062500      # default amount is EIR Alt1
+      receiving_buildings_filter: juris == 'Hayward' and (
+                                    tra_id == 'tra1' or
+                                    tra_id == 'tra2a' or
+                                    tra_id == 'tra2b' or
+                                    tra_id == 'tra2c')
+      enable_in_scenarios: ["26"] # only EIR Alt1
+    pleasanton_office_bond_settings:
+      name: "Pleasanton Office Subsidy Bond"
+      sending_buildings_subaccount_def: regional
+      total_amount: 14062500      # default amount is EIR Alt1
+      receiving_buildings_filter: juris == 'Pleasanton' and (
+                                    tra_id == 'tra1' or
+                                    tra_id == 'tra2a' or
+                                    tra_id == 'tra2b' or
+                                    tra_id == 'tra2c')
+      enable_in_scenarios: ["26"] # only EIR Alt1
+    walnut_creek_office_bond_settings:
+      name: "Walnut Creek Office Subsidy Bond"
+      sending_buildings_subaccount_def: regional
+      total_amount: 14062500      # default amount is EIR Alt1
+      receiving_buildings_filter: juris == 'Walnut Creek' and (
+                                    tra_id == 'tra1' or
+                                    tra_id == 'tra2a' or
+                                    tra_id == 'tra2b' or
+                                    tra_id == 'tra2c')
+      enable_in_scenarios: ["26"] # only EIR Alt1
+    livermore_office_bond_settings:
+      name: "Livermore Office Subsidy Bond"
+      sending_buildings_subaccount_def: regional
+      total_amount: 4166667       # default amount is EIR Alt1
+      receiving_buildings_filter: juris == 'Livermore' and (
+                                    tra_id == 'tra1' or
+                                    tra_id == 'tra2a' or 
+                                    tra_id == 'tra2b' or
+                                    tra_id == 'tra2c' or
+                                    tra_id == 'tra3')
+      enable_in_scenarios: ["26"] # only EIR Alt1
+    newark_office_bond_settings:
+      name: "Newark Office Subsidy Bond"
+      sending_buildings_subaccount_def: regional
+      total_amount: 4166667       # default amount is EIR Alt1
+      receiving_buildings_filter: juris == 'Newark' and (
+                                    tra_id == 'tra1' or
+                                    tra_id == 'tra2a' or 
+                                    tra_id == 'tra2b' or
+                                    tra_id == 'tra2c' or
+                                    tra_id == 'tra3')
+      enable_in_scenarios: ["26"] # only EIR Alt1   
 
   profitability_adjustment_policies:
 
