--- a/configs/policy.yaml
+++ b/configs/policy.yaml
@@ -2592,7 +2592,7 @@ acct_settings:
       receiving_buildings_filter_fb_alt1: county == 'Alameda' & gg_id > '' & tra_id > ''
       receiving_buildings_filter_fb_alt2: county == 'Alameda' & gg_id > '' & (sesit_id == 'hra' | sesit_id == 'hradis')
       subsidize_affordable: True
-      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24", "26", "27", "28", "29"]
+      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24", "26", "27", "29"]
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
       default_amount_scenarios_fb: ["24", "26", "27", "29"]
@@ -2614,7 +2614,7 @@ acct_settings:
       receiving_buildings_filter_fb_alt1: county == 'Contra Costa' & gg_id > '' & tra_id > ''
       receiving_buildings_filter_fb_alt2: county == 'Contra Costa' & gg_id > '' & (sesit_id == 'hra' | sesit_id == 'hradis')
       subsidize_affordable: True
-      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24", "26", "27", "28", "29"]
+      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24", "26", "27", "29"]
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
       default_amount_scenarios_fb: ["24", "26", "27", "29"]
@@ -2636,7 +2636,7 @@ acct_settings:
       receiving_buildings_filter_fb_alt1: county == 'Marin' & gg_id > '' & tra_id > ''
       receiving_buildings_filter_fb_alt2: county == 'Marin' & gg_id > '' & (sesit_id == 'hra' | sesit_id == 'hradis')
       subsidize_affordable: True
-      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24", "26", "27", "28", "29"]
+      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24", "26", "27", "29"]
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
       default_amount_scenarios_fb: ["24", "26", "27", "29"]
@@ -2658,7 +2658,7 @@ acct_settings:
       receiving_buildings_filter_fb_alt1: county == 'Napa' & gg_id > '' & tra_id > ''
       receiving_buildings_filter_fb_alt2: county == 'Napa' & gg_id > '' & (sesit_id == 'hra' | sesit_id == 'hradis')
       subsidize_affordable: True
-      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24", "26", "27", "28", "29"]
+      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24", "26", "27", "29"]
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
       default_amount_scenarios_fb: ["24", "26", "27", "29"]
@@ -2680,7 +2680,7 @@ acct_settings:
       receiving_buildings_filter_fb_alt1: county == 'San Francisco' & gg_id > '' & tra_id > ''
       receiving_buildings_filter_fb_alt2: county == 'San Francisco' & gg_id > '' & (sesit_id == 'hra' | sesit_id == 'hradis')
       subsidize_affordable: True
-      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24", "26", "27", "28", "29"]
+      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24", "26", "27", "29"]
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
       default_amount_scenarios_fb: ["24", "26", "27", "29"]
@@ -2702,7 +2702,7 @@ acct_settings:
       receiving_buildings_filter_fb_alt1: county == 'San Mateo' & gg_id > '' & tra_id > ''
       receiving_buildings_filter_fb_alt2: county == 'San Mateo' & gg_id > '' & (sesit_id == 'hra' | sesit_id == 'hradis')
       subsidize_affordable: True
-      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24", "26", "27", "28", "29"]
+      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24", "26", "27", "29"]
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
       default_amount_scenarios_fb: ["24", "26", "27", "29"]
@@ -2724,7 +2724,7 @@ acct_settings:
       receiving_buildings_filter_fb_alt1: county == 'Santa Clara' & gg_id > '' & tra_id > ''
       receiving_buildings_filter_fb_alt2: county == 'Santa Clara' & gg_id > '' & (sesit_id == 'hra' | sesit_id == 'hradis')
       subsidize_affordable: True
-      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24", "26", "27", "28", "29"]
+      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24", "26", "27", "29"]
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
       default_amount_scenarios_fb: ["24", "26", "27", "29"]
@@ -2746,7 +2746,7 @@ acct_settings:
       receiving_buildings_filter_fb_alt1: county == 'Solano' & gg_id > '' & tra_id > ''
       receiving_buildings_filter_fb_alt2: county == 'Solano' & gg_id > '' & (sesit_id == 'hra' | sesit_id == 'hradis')
       subsidize_affordable: True
-      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24", "26", "27", "28", "29"]
+      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24", "26", "27", "29"]
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
       default_amount_scenarios_fb: ["24", "26", "27", "29"]
@@ -2768,7 +2768,7 @@ acct_settings:
       receiving_buildings_filter_fb_alt1: county == 'Sonoma' & gg_id > '' & tra_id > ''
       receiving_buildings_filter_fb_alt2: county == 'Sonoma' & gg_id > '' & (sesit_id == 'hra' | sesit_id == 'hradis')
       subsidize_affordable: True
-      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24", "26", "27", "28", "29"]
+      enable_in_scenarios: ["11", "12", "15", "21", "22", "23", "24", "26", "27", "29"]
       default_amount_scenarios_db: ["21"]
       alternate_amount_scenarios_db: ["22", "23"]
       default_amount_scenarios_fb: ["24", "26", "27", "29"]
@@ -2785,7 +2785,7 @@ acct_settings:
       receiving_buildings_filter:
       receiving_buildings_filter_fb_alt2: county == 'Alameda' & gg_id > '' & sesit_id != 'hra' & sesit_id != 'hradis'
       subsidize_affordable: True
-      enable_in_scenarios: ["28"]
+      enable_in_scenarios: []
       alt2_amount_scenarios_fb: ['28']
       geography_scenarios_fb_alt2: ["28"]
 
@@ -2797,7 +2797,7 @@ acct_settings:
       receiving_buildings_filter:
       receiving_buildings_filter_fb_alt2: county == 'Contra Costa' & gg_id > '' & sesit_id != 'hra' & sesit_id != 'hradis'
       subsidize_affordable: True
-      enable_in_scenarios: ["28"]
+      enable_in_scenarios: []
       alt2_amount_scenarios_fb: ['28']
       geography_scenarios_fb_alt2: ["28"]
 
@@ -2810,7 +2810,7 @@ acct_settings:
       receiving_buildings_filter_fb_alt2: county == 'Marin' & gg_id > '' & sesit_id != 'hra' & sesit_id != 'hradis'
       subsidize_affordable: True
       enable_in_scenarios: ["28"]
-      alt2_amount_scenarios_fb: ['28']
+      alt2_amount_scenarios_fb: []
       geography_scenarios_fb_alt2: ["28"]
 
     napa_bond_settings_alt2:
@@ -2822,7 +2822,7 @@ acct_settings:
       receiving_buildings_filter_fb_alt2: county == 'Napa' & gg_id > '' & sesit_id != 'hra' & sesit_id != 'hradis'
       subsidize_affordable: True
       enable_in_scenarios: ["28"]
-      alt2_amount_scenarios_fb: ['28']
+      alt2_amount_scenarios_fb: []
       geography_scenarios_fb_alt2: ["28"]
 
     san_francisco_bond_settings_alt2:
@@ -2834,7 +2834,7 @@ acct_settings:
       receiving_buildings_filter_fb_alt2: county == 'San Francisco' & gg_id > '' & sesit_id != 'hra' & sesit_id != 'hradis'
       subsidize_affordable: True
       enable_in_scenarios: ["28"]
-      alt2_amount_scenarios_fb: ['28']
+      alt2_amount_scenarios_fb: []
       geography_scenarios_fb_alt2: ["28"]
 
     san_mateo_bond_settings_alt2:
@@ -2846,7 +2846,7 @@ acct_settings:
       receiving_buildings_filter_fb_alt2: county == 'San Mateo' & gg_id > '' & sesit_id != 'hra' & sesit_id != 'hradis'
       subsidize_affordable: True
       enable_in_scenarios: ["28"]
-      alt2_amount_scenarios_fb: ['28']
+      alt2_amount_scenarios_fb: []
       geography_scenarios_fb_alt2: ["28"]
 
     santa_clara_bond_settings_alt2:
@@ -2858,7 +2858,7 @@ acct_settings:
       receiving_buildings_filter_fb_alt2: county == 'Santa Clara' & gg_id > '' & sesit_id != 'hra' & sesit_id != 'hradis'
       subsidize_affordable: True
       enable_in_scenarios: ["28"]
-      alt2_amount_scenarios_fb: ['28']
+      alt2_amount_scenarios_fb: []
       geography_scenarios_fb_alt2: ["28"]
 
     solano_bond_settings_alt2:
@@ -2870,7 +2870,7 @@ acct_settings:
       receiving_buildings_filter_fb_alt2: county == 'Solano' & gg_id > '' & sesit_id != 'hra' & sesit_id != 'hradis'
       subsidize_affordable: True
       enable_in_scenarios: ["28"]
-      alt2_amount_scenarios_fb: ['28']
+      alt2_amount_scenarios_fb: []
       geography_scenarios_fb_alt2: ["28"]
 
     sonoma_bond_settings_alt2:
@@ -2882,7 +2882,7 @@ acct_settings:
       receiving_buildings_filter_fb_alt2: county == 'Sonoma' & gg_id > '' & sesit_id != 'hra' & sesit_id != 'hradis'
       subsidize_affordable: True
       enable_in_scenarios: ["28"]
-      alt2_amount_scenarios_fb: ['28']
+      alt2_amount_scenarios_fb: []
       geography_scenarios_fb_alt2: ["28"]
 
     # parcel tax settings
@@ -3523,7 +3523,7 @@ acct_settings:
 
 
 unit_preservation:
-    enable_in_scenarios: ["24", "26", "27", "28", "29"]
+    enable_in_scenarios: ["24", "26", "27", "29"]
     geography: county_name
     settings: # change geography as needed
       'Alameda':
