--- a/configs/policy.yaml
+++ b/configs/policy.yaml
@@ -2809,8 +2809,8 @@ acct_settings:
       receiving_buildings_filter:
       receiving_buildings_filter_fb_alt2: county == 'Marin' & gg_id > '' & sesit_id != 'hra' & sesit_id != 'hradis'
       subsidize_affordable: True
-      enable_in_scenarios: ["28"]
-      alt2_amount_scenarios_fb: []
+      enable_in_scenarios: []
+      alt2_amount_scenarios_fb: ['28']
       geography_scenarios_fb_alt2: ["28"]
 
     napa_bond_settings_alt2:
@@ -2821,8 +2821,8 @@ acct_settings:
       receiving_buildings_filter:
       receiving_buildings_filter_fb_alt2: county == 'Napa' & gg_id > '' & sesit_id != 'hra' & sesit_id != 'hradis'
       subsidize_affordable: True
-      enable_in_scenarios: ["28"]
-      alt2_amount_scenarios_fb: []
+      enable_in_scenarios: []
+      alt2_amount_scenarios_fb: ['28']
       geography_scenarios_fb_alt2: ["28"]
 
     san_francisco_bond_settings_alt2:
@@ -2833,8 +2833,8 @@ acct_settings:
       receiving_buildings_filter:
       receiving_buildings_filter_fb_alt2: county == 'San Francisco' & gg_id > '' & sesit_id != 'hra' & sesit_id != 'hradis'
       subsidize_affordable: True
-      enable_in_scenarios: ["28"]
-      alt2_amount_scenarios_fb: []
+      enable_in_scenarios: []
+      alt2_amount_scenarios_fb: ['28']
       geography_scenarios_fb_alt2: ["28"]
 
     san_mateo_bond_settings_alt2:
@@ -2845,7 +2845,7 @@ acct_settings:
       receiving_buildings_filter: 
       receiving_buildings_filter_fb_alt2: county == 'San Mateo' & gg_id > '' & sesit_id != 'hra' & sesit_id != 'hradis'
       subsidize_affordable: True
-      enable_in_scenarios: ["28"]
+      enable_in_scenarios: ['28']
       alt2_amount_scenarios_fb: []
       geography_scenarios_fb_alt2: ["28"]
 
@@ -2857,8 +2857,8 @@ acct_settings:
       receiving_buildings_filter:
       receiving_buildings_filter_fb_alt2: county == 'Santa Clara' & gg_id > '' & sesit_id != 'hra' & sesit_id != 'hradis'
       subsidize_affordable: True
-      enable_in_scenarios: ["28"]
-      alt2_amount_scenarios_fb: []
+      enable_in_scenarios: []
+      alt2_amount_scenarios_fb: ['28']
       geography_scenarios_fb_alt2: ["28"]
 
     solano_bond_settings_alt2:
@@ -2869,8 +2869,8 @@ acct_settings:
       receiving_buildings_filter: 
       receiving_buildings_filter_fb_alt2: county == 'Solano' & gg_id > '' & sesit_id != 'hra' & sesit_id != 'hradis'
       subsidize_affordable: True
-      enable_in_scenarios: ["28"]
-      alt2_amount_scenarios_fb: []
+      enable_in_scenarios: []
+      alt2_amount_scenarios_fb: ['28']
       geography_scenarios_fb_alt2: ["28"]
 
     sonoma_bond_settings_alt2:
@@ -2881,8 +2881,8 @@ acct_settings:
       receiving_buildings_filter: 
       receiving_buildings_filter_fb_alt2: county == 'Sonoma' & gg_id > '' & sesit_id != 'hra' & sesit_id != 'hradis'
       subsidize_affordable: True
-      enable_in_scenarios: ["28"]
-      alt2_amount_scenarios_fb: []
+      enable_in_scenarios: [""]
+      alt2_amount_scenarios_fb: ['28']
       geography_scenarios_fb_alt2: ["28"]
 
     # parcel tax settings
